Add Windows compatibility, README, and performance optimizations
- Add comprehensive README with Mac/Windows setup instructions
- Update .gitignore for cross-platform support
- Add network_utils.py for network drive detection (Windows/macOS/Linux)
- Performance optimizations: multiprocessing for graphics/tables/images
- PDF link checker optimizations (32 workers, connection pooling)
- Table width limit updated to 6.75 inches (486 points)
- UI consistency fixes (button placement)
- Windows compatibility: all paths use os.path.join, network drive detection

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,48 @@
-*.log
+# Python
 __pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+*.egg-info/
+dist/
+build/
+
+# Virtual Environment
+venv/
+env/
+ENV/
+.venv
+
+# Logs and Reports
+*.log
+*.json
+validation_result*.json
+image_metadata_report.json
+
+# OS Files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+desktop.ini
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Temporary files
+*.tmp
+*.bak
+*~
+
+# Project-specific (generated/test files)
+table_detection.log
+image_metadata.log
+validation.log
